# eigentask

./: .gitignore  README.md  app-db.example.env  deploy.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  keycloak-db.example.env  keycloak.example.env  migrate.sh
.github/workflows/: DEPLOYMENT.md  ENV-FILES-SETUP.md  SINGLE-HOST-SETUP.md  TESTING-DEPLOYMENT.md  VOLUME-MIGRATION.md  ci.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml
api/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  docker-entrypoint.sh  main.py  pyproject.toml  pytest.ini
api/alembic/: env.py
api/alembic/versions/: 1cf81a1539c0_test_autogenerate.py  20251206_ensure_tasks_table_and_columns.py  20260201_add_task_sessions.py  9f5878d9abef_add_status_and_due_at_fields_to_tasks.py  ae807134c28e_add_planned_start_at_planned_end_at_and_.py  ec4370fc48f5_test_migration_script.py
api/app/: __init__.py  auth.py  config.py
api/app/core/: auth.py  db.py  helpers.py  session.py  types.py
api/app/models/: __init__.py  task.py  task_session.py
api/app/routers/: auth.py  root.py  sessions.py  tasks.py  users.py
api/app/schemas/: session.py  task.py
api/app/services/: sessions.py  tasks.py
api/tests/: conftest.py  factories.py  test_auth.py  test_smoke.py  test_tasks.py  test_users.py
docs/: DEPLOYMENT.md  README.md  VOLUME-MIGRATION.md
envs/: api.dev.env  app-db.dev.env  app-db.example.env  keycloak-db.dev.env  keycloak-db.example.env  keycloak.dev.env  keycloak.example.env  web.dev.env
keycloak/: README.md
keycloak/realm-export/: eigentask-realm.json
keycloak/themes/eigentask/account/: theme.properties
keycloak/themes/eigentask/account/resources/css/: eigentask.css
keycloak/themes/eigentask/email/: theme.properties
keycloak/themes/eigentask/login/: template.ftl  theme.properties
keycloak/themes/eigentask/login/messages/: messages_en.properties
keycloak/themes/eigentask/login/resources/css/: eigentask.css
keycloak/themes/eigentask/login/templates/: footer.ftl
nginx/: README.md  production.conf  staging.conf
scripts/: deploy.sh  migrate.py  migrate.sh
web/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  package-lock.json  package.json  public.env  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
web/src/: app.css  app.d.ts  app.html  hooks.server.ts
web/src/lib/: apiClient.server.ts  apiClient.ts
web/src/lib/components/: CreateTaskForm.svelte  CreateTaskModal.svelte  Header.svelte  TaskBoard.svelte  TaskCard.svelte  TaskColumn.svelte  TaskEditDrawer.svelte  TaskToolbar.svelte  Timeline.svelte
web/src/lib/components/ui/: Button.svelte  Input.svelte  Label.svelte  OverlayShell.svelte  Textarea.svelte
web/src/routes/: +layout.svelte  +page.svelte  +page.ts  Header.svelte  TaskCard.svelte
web/src/routes/(protected)/: +layout.server.ts
web/src/routes/(protected)/app/: +page.server.ts  +page.svelte
web/src/routes/(protected)/settings/: +page.svelte
web/src/routes/(public)/: +page.svelte
web/src/routes/(public)/articles/: +page.svelte
