[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.7",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "itsdangerous>=2.2.0",
    "pyjwt>=2.10.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "ty>=0.0.1a20",
]

[tool.ty]
root = ["./api"]
