[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.7",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "itsdangerous>=2.2.0",
    "pyjwt>=2.10.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.29.0",
    "alembic>=1.17.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "ty>=0.0.1a20",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "D100",
    "D203",
    "D213",
]
