[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.7",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "itsdangerous>=2.2.0",
    "pyjwt>=2.10.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.29.0",
    "alembic>=1.17.1",
]

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.0",
    "ty>=0.0.1a20",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "fakeredis>=2.26.1",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["alembic"]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "D100",
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101",      # Allow assert statements in tests
    "PLR2004",   # Allow magic values in tests
    "ARG002",    # Allow unused method arguments (fixtures)
    "ANN001",    # Allow missing type annotations in test fixtures
    "PLC0415",   # Allow imports not at top-level in tests
    "S106",      # Allow hardcoded passwords in test fixtures
    "PLR0913",   # Allow many arguments in test factories
]
"app/config.py" = [
    "ANN401",    # Allow Any in Pydantic validators and __init__
]
"app/models/task.py" = [
    "TC003",     # datetime needed at runtime for SQLAlchemy
]
"app/models/task_session.py" = [
    "TC003",     # datetime in mapped columns
    "UP037",     # keep "Task" quoted for forward ref at runtime
]
"app/routers/sessions.py" = [
    "PLR0913",   # Allow many arguments in route handlers
]
"app/services/sessions.py" = [
    "PLR0913",   # Allow many arguments in session service
]

[tool.ty.environment]
extra-paths = [".venv/"]
python = ".venv/"
